@@ -7,7 +7,9 @@ Features
 - The ``pyramid.config.Configurator`` has grown the ability to allow
   actions to call other actions during a commit-cycle. This enables much more
   logic to be placed into actions, such as the ability to invoke other actions
-  or group them for improved conflict detection.
+  or group them for improved conflict detection. We have also exposed and
+  documented the config phases that Pyramid uses in order to further assist
+  in building conforming addons.
   See https://github.com/Pylons/pyramid/pull/1513
 
 - Add ``pyramid.request.apply_request_extensions`` function which can be
